--- a/app/src/main/res/layout/training_creation_fragment_layout.xml
+++ b/app/src/main/res/layout/training_creation_fragment_layout.xml
@@ -35,12 +35,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/training_creation_date_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="130dp"
-        android:text="@{viewModel.training.trainingDate.toString()}"
-        android:onClickListener=""
+        android:text="@{viewModel.trainingDate}"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/training_creation_name" />
