--- a/app/src/main/res/layout/training_creation_fragment_layout.xml
+++ b/app/src/main/res/layout/training_creation_fragment_layout.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:text="Button"
+        android:onClick="@{()->viewModel.save()}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -29,7 +30,7 @@
         android:layout_marginTop="32dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@{viewModel.training.trainingName}"
+        android:text="@={viewModel.trainingName}"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
