--- a/app/src/main/res/layout/training_item_card.xml
+++ b/app/src/main/res/layout/training_item_card.xml
@@ -9,6 +9,7 @@
 <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="200dp"
+    android:id="@+id/training_card"
     app:cardElevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
