--- a/app/src/main/res/layout/exercise_fragment_layout.xml
+++ b/app/src/main/res/layout/exercise_fragment_layout.xml
@@ -32,8 +32,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="@={viewModel.exercise.exerciseName}"
+            android:inputType="text"
+            android:text="@={viewModel.exerciseName}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -44,25 +44,109 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="@={viewModel.exercise.exerciseComments}"
+            android:inputType="text"
+            android:text="@={viewModel.exerciseComments}"
+            app:layout_constraintBottom_toTopOf="@+id/exercise_action_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/exercise_action_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
+            android:text="@{viewModel.actionString}"
+            android:onClick="@{()->viewModel.action()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
-            android:id="@+id/editText4"
+            android:id="@+id/set_1"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:inputType="number"
+            android:text="@={viewModel.firstSetNumber}"
+            app:layout_constraintBottom_toTopOf="@+id/set_2"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <EditText
+            android:id="@+id/set_1_reps"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintBottom_toTopOf="@+id/set_2_reps"
+            app:layout_constraintEnd_toStartOf="@+id/set_1_weight"
+            app:layout_constraintStart_toEndOf="@+id/set_1" />
+
+        <EditText
+            android:id="@+id/set_1_weight"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintBottom_toTopOf="@+id/set_2_weight"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <EditText
+            android:id="@+id/set_2"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            android:ems="10"
+            android:inputType="number"
+            android:text="set 2"
+            app:layout_constraintBottom_toTopOf="@+id/set_3"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <EditText
+            android:id="@+id/set_2_reps"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintBottom_toTopOf="@+id/set_3_reps"
+            app:layout_constraintEnd_toStartOf="@+id/set_2_weight"
+            app:layout_constraintStart_toEndOf="@+id/set_2" />
+
+        <EditText
+            android:id="@+id/set_2_weight"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintBottom_toTopOf="@+id/set_3_weight"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <EditText
+            android:id="@+id/set_3"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            android:ems="10"
+            android:inputType="number"
+            android:text="set 3"
             app:layout_constraintBottom_toTopOf="@+id/view"
             app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
-            android:id="@+id/editText5"
+            android:id="@+id/set_3_reps"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -71,11 +155,11 @@
             android:ems="10"
             android:inputType="number"
             app:layout_constraintBottom_toTopOf="@+id/view"
-            app:layout_constraintEnd_toStartOf="@+id/editText6"
-            app:layout_constraintStart_toEndOf="@+id/editText4" />
+            app:layout_constraintEnd_toStartOf="@+id/set_3_weight"
+            app:layout_constraintStart_toEndOf="@+id/set_3" />
 
         <EditText
-            android:id="@+id/editText6"
+            android:id="@+id/set_3_weight"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -83,6 +167,98 @@
             android:ems="10"
             android:inputType="number"
             app:layout_constraintBottom_toTopOf="@+id/view"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <EditText
+            android:id="@+id/set_4"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            android:ems="10"
+            android:inputType="number"
+            android:text="set 4"
+            app:layout_constraintTop_toBottomOf="@+id/view"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <EditText
+            android:id="@+id/set_4_reps"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintTop_toBottomOf="@+id/view"
+            app:layout_constraintEnd_toStartOf="@+id/set_4_weight"
+            app:layout_constraintStart_toEndOf="@+id/set_4" />
+
+        <EditText
+            android:id="@+id/set_4_weight"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintTop_toBottomOf="@+id/view"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <EditText
+            android:id="@+id/set_5"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            android:ems="10"
+            android:inputType="number"
+            android:text="set 5"
+            app:layout_constraintTop_toBottomOf="@+id/set_4"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <EditText
+            android:id="@+id/set_5_reps"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintTop_toBottomOf="@+id/set_4_reps"
+            app:layout_constraintEnd_toStartOf="@+id/set_5_weight"
+            app:layout_constraintStart_toEndOf="@+id/set_5" />
+
+        <EditText
+            android:id="@+id/set_5_weight"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintTop_toBottomOf="@+id/set_4_weight"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="32dp"
+            android:text="reps"
+            app:layout_constraintBottom_toTopOf="@+id/set_1_reps"
+            app:layout_constraintEnd_toStartOf="@+id/textView3" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="32dp"
+            android:text="weight"
+            app:layout_constraintBottom_toTopOf="@+id/set_1_weight"
             app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
