--- a/app/src/main/res/layout/exercise_fragment_layout.xml
+++ b/app/src/main/res/layout/exercise_fragment_layout.xml
@@ -20,7 +20,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@android:color/darker_gray"
+            android:background="@android:color/transparent"
             app:layout_constraintBottom_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -61,15 +61,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <EditText
+        <TextView
             android:id="@+id/set_1"
-            android:layout_width="50dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            android:ems="10"
-            android:inputType="number"
-            android:text="@={viewModel.firstSetNumber}"
+            android:layout_marginBottom="24dp"
+            android:text="Set 1"
             app:layout_constraintBottom_toTopOf="@+id/set_2"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -82,6 +80,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:inputType="number"
+            android:text="@={viewModel.firstSetReps}"
             app:layout_constraintBottom_toTopOf="@+id/set_2_reps"
             app:layout_constraintEnd_toStartOf="@+id/set_1_weight"
             app:layout_constraintStart_toEndOf="@+id/set_1" />
@@ -94,18 +93,17 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:inputType="number"
+            android:text="@={viewModel.firstSetWeight}"
             app:layout_constraintBottom_toTopOf="@+id/set_2_weight"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <EditText
+        <TextView
             android:id="@+id/set_2"
-            android:layout_width="50dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            android:ems="10"
-            android:inputType="number"
-            android:text="set 2"
+            android:layout_marginBottom="24dp"
+            android:text="Set 2"
             app:layout_constraintBottom_toTopOf="@+id/set_3"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -118,6 +116,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:inputType="number"
+            android:text="@={viewModel.secondSetReps}"
             app:layout_constraintBottom_toTopOf="@+id/set_3_reps"
             app:layout_constraintEnd_toStartOf="@+id/set_2_weight"
             app:layout_constraintStart_toEndOf="@+id/set_2" />
@@ -130,18 +129,17 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:inputType="number"
+            android:text="@={viewModel.secondSetWeight}"
             app:layout_constraintBottom_toTopOf="@+id/set_3_weight"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <EditText
+        <TextView
             android:id="@+id/set_3"
-            android:layout_width="50dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            android:ems="10"
-            android:inputType="number"
-            android:text="set 3"
+            android:layout_marginBottom="24dp"
+            android:text="Set 3"
             app:layout_constraintBottom_toTopOf="@+id/view"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -154,6 +152,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:inputType="number"
+            android:text="@={viewModel.thirdSetReps}"
             app:layout_constraintBottom_toTopOf="@+id/view"
             app:layout_constraintEnd_toStartOf="@+id/set_3_weight"
             app:layout_constraintStart_toEndOf="@+id/set_3" />
@@ -166,99 +165,103 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:inputType="number"
+            android:text="@={viewModel.thirdSetWeight}"
             app:layout_constraintBottom_toTopOf="@+id/view"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <EditText
+        <TextView
             android:id="@+id/set_4"
-            android:layout_width="50dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            android:ems="10"
-            android:inputType="number"
-            android:text="set 4"
-            app:layout_constraintTop_toBottomOf="@+id/view"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:layout_marginTop="24dp"
+            android:text="Set 4"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view" />
 
         <EditText
             android:id="@+id/set_4_reps"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:ems="10"
             android:inputType="number"
-            app:layout_constraintTop_toBottomOf="@+id/view"
+            android:text="@={viewModel.fourthSetReps}"
             app:layout_constraintEnd_toStartOf="@+id/set_4_weight"
-            app:layout_constraintStart_toEndOf="@+id/set_4" />
+            app:layout_constraintStart_toEndOf="@+id/set_4"
+            app:layout_constraintTop_toBottomOf="@+id/view" />
 
         <EditText
             android:id="@+id/set_4_weight"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:ems="10"
             android:inputType="number"
-            app:layout_constraintTop_toBottomOf="@+id/view"
-            app:layout_constraintEnd_toEndOf="parent" />
+            android:text="@={viewModel.fourthSetWeight}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view" />
 
-        <EditText
+        <TextView
             android:id="@+id/set_5"
-            android:layout_width="50dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            android:ems="10"
-            android:inputType="number"
-            android:text="set 5"
-            app:layout_constraintTop_toBottomOf="@+id/set_4"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:layout_marginTop="24dp"
+            android:text="Set 5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/set_4" />
 
         <EditText
             android:id="@+id/set_5_reps"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:ems="10"
             android:inputType="number"
-            app:layout_constraintTop_toBottomOf="@+id/set_4_reps"
+            android:text="@={viewModel.fifthSetReps}"
             app:layout_constraintEnd_toStartOf="@+id/set_5_weight"
-            app:layout_constraintStart_toEndOf="@+id/set_5" />
+            app:layout_constraintStart_toEndOf="@+id/set_5"
+            app:layout_constraintTop_toBottomOf="@+id/set_4_reps" />
 
         <EditText
             android:id="@+id/set_5_weight"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:ems="10"
             android:inputType="number"
-            app:layout_constraintTop_toBottomOf="@+id/set_4_weight"
-            app:layout_constraintEnd_toEndOf="parent" />
+            android:text="@={viewModel.fifthSetWeight}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/set_4_weight" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="32dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:text="reps"
             app:layout_constraintBottom_toTopOf="@+id/set_1_reps"
-            app:layout_constraintEnd_toStartOf="@+id/textView3" />
+            app:layout_constraintEnd_toStartOf="@+id/set_1_weight"
+            app:layout_constraintStart_toEndOf="@+id/set_1" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="32dp"
+            android:layout_marginBottom="8dp"
             android:text="weight"
             app:layout_constraintBottom_toTopOf="@+id/set_1_weight"
             app:layout_constraintEnd_toEndOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
