--- a/app/src/main/res/layout/exercise_fragment_layout.xml
+++ b/app/src/main/res/layout/exercise_fragment_layout.xml
@@ -34,6 +34,7 @@
             android:ems="10"
             android:inputType="text"
             android:text="@={viewModel.exerciseName}"
+            android:maxLength="15"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -46,6 +47,7 @@
             android:ems="10"
             android:inputType="text"
             android:text="@={viewModel.exerciseComments}"
+            android:maxLength="100"
             app:layout_constraintBottom_toTopOf="@+id/exercise_action_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -81,6 +83,7 @@
             android:ems="10"
             android:inputType="number"
             android:text="@={viewModel.firstSetReps}"
+            android:maxLength="2"
             app:layout_constraintBottom_toTopOf="@+id/set_2_reps"
             app:layout_constraintEnd_toStartOf="@+id/set_1_weight"
             app:layout_constraintStart_toEndOf="@+id/set_1" />
@@ -94,6 +97,7 @@
             android:ems="10"
             android:inputType="number"
             android:text="@={viewModel.firstSetWeight}"
+            android:maxLength="3"
             app:layout_constraintBottom_toTopOf="@+id/set_2_weight"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -117,6 +121,7 @@
             android:ems="10"
             android:inputType="number"
             android:text="@={viewModel.secondSetReps}"
+            android:maxLength="2"
             app:layout_constraintBottom_toTopOf="@+id/set_3_reps"
             app:layout_constraintEnd_toStartOf="@+id/set_2_weight"
             app:layout_constraintStart_toEndOf="@+id/set_2" />
@@ -130,6 +135,7 @@
             android:ems="10"
             android:inputType="number"
             android:text="@={viewModel.secondSetWeight}"
+            android:maxLength="3"
             app:layout_constraintBottom_toTopOf="@+id/set_3_weight"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -153,6 +159,7 @@
             android:ems="10"
             android:inputType="number"
             android:text="@={viewModel.thirdSetReps}"
+            android:maxLength="2"
             app:layout_constraintBottom_toTopOf="@+id/view"
             app:layout_constraintEnd_toStartOf="@+id/set_3_weight"
             app:layout_constraintStart_toEndOf="@+id/set_3" />
@@ -166,6 +173,7 @@
             android:ems="10"
             android:inputType="number"
             android:text="@={viewModel.thirdSetWeight}"
+            android:maxLength="3"
             app:layout_constraintBottom_toTopOf="@+id/view"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -189,6 +197,7 @@
             android:ems="10"
             android:inputType="number"
             android:text="@={viewModel.fourthSetReps}"
+            android:maxLength="2"
             app:layout_constraintEnd_toStartOf="@+id/set_4_weight"
             app:layout_constraintStart_toEndOf="@+id/set_4"
             app:layout_constraintTop_toBottomOf="@+id/view" />
@@ -202,6 +211,7 @@
             android:ems="10"
             android:inputType="number"
             android:text="@={viewModel.fourthSetWeight}"
+            android:maxLength="3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view" />
 
@@ -225,6 +235,7 @@
             android:ems="10"
             android:inputType="number"
             android:text="@={viewModel.fifthSetReps}"
+            android:maxLength="2"
             app:layout_constraintEnd_toStartOf="@+id/set_5_weight"
             app:layout_constraintStart_toEndOf="@+id/set_5"
             app:layout_constraintTop_toBottomOf="@+id/set_4_reps" />
@@ -238,6 +249,7 @@
             android:ems="10"
             android:inputType="number"
             android:text="@={viewModel.fifthSetWeight}"
+            android:maxLength="3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/set_4_weight" />
 
