--- a/app/src/main/res/layout/exercise_item_card.xml
+++ b/app/src/main/res/layout/exercise_item_card.xml
@@ -24,6 +24,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:text="@{viewModel.exerciseName}"
+                android:maxLength="15"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
