--- a/app/src/main/res/layout/running_creation_fragment_layout.xml
+++ b/app/src/main/res/layout/running_creation_fragment_layout.xml
@@ -42,6 +42,7 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:text="@={viewModel.runningName}"
+            android:maxLength="15"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,6 +56,7 @@
             android:ems="10"
             android:inputType="numberDecimal"
             android:text="@={viewModel.runningDistance}"
+            android:maxLength="10"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -80,8 +82,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:text="@={viewModel.runningTime}"
+            android:maxLength="10"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -107,8 +110,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="textMultiLine"
             android:text="@={viewModel.runningComments}"
+            android:maxLength="50"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
