--- a/app/src/main/res/layout/training_creation_fragment_layout.xml
+++ b/app/src/main/res/layout/training_creation_fragment_layout.xml
@@ -30,6 +30,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@={viewModel.trainingName}"
+        android:maxLength="15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
