Shadows, cards are now in constraint layout

--- a/app/src/main/res/layout/exercise_fragment_layout.xml
+++ b/app/src/main/res/layout/exercise_fragment_layout.xml
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="textMultiLine"
             android:text="@={viewModel.exerciseComments}"
             android:maxLength="100"
             app:layout_constraintBottom_toTopOf="@+id/exercise_action_button"
