Design changes, training settings added

--- a/app/src/main/res/layout/main_screen_relative_layout.xml
+++ b/app/src/main/res/layout/main_screen_relative_layout.xml
@@ -43,6 +43,9 @@
         android:background="@android:color/darker_gray"
         app:elevation="4dp"
         app:menu="@menu/main_screen_tabs"
-        app:showAsAction="ifRoom|withText" />
+        app:showAsAction="ifRoom|withText"
+        app:itemIconTint="@color/selector"
+        app:itemTextColor="@color/selector"
+        />
 
 </RelativeLayout>
