--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,13 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="cardColor">#1D1D1D</color>
+    <color name="backgroundColor">#121212</color>
+    <color name="textColor">#E0E0E0</color>
+    <color name="tabsColor">#00C853</color>
+    <color name="fabColor">#BA85FA</color>
+    <color name="colorCardBackground1">#2D2A2E</color>
+    <color name="colorCardBackground">#333341</color>
 
     <color name="transparent">#80000000</color>
 </resources>
