--- a/app/src/main/res/layout/training_item_card.xml
+++ b/app/src/main/res/layout/training_item_card.xml
@@ -22,7 +22,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             app:cardCornerRadius="8dp"
-            app:cardBackgroundColor="@color/colorCardBackground"
+            app:cardBackgroundColor="@color/cardColor"
             app:cardElevation="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
