--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,9 +18,15 @@
     <style name="DarkTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Add attributes here -->
         <item name="colorAccent">@android:color/darker_gray</item>
-        <item name="colorPrimaryDark">@color/cardColor</item>
+        <item name="colorPrimaryDark">@color/backgroundColor</item>
         <item name="android:colorBackground">@color/backgroundColor</item>
         <item name="android:navigationBarColor">@android:color/black</item>
+    </style>
+
+    <style name="MyEditTextTheme">
+        <item name="android:colorControlNormal">@color/editTextColor</item>
+        <item name="android:colorControlActivated">@android:color/white</item>
+        <item name="android:colorControlHighlight">@android:color/white</item>
     </style>
 
 </resources>
