--- a/app/src/main/res/layout/running_creation_fragment_layout.xml
+++ b/app/src/main/res/layout/running_creation_fragment_layout.xml
@@ -41,10 +41,11 @@
             android:layout_marginTop="16dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="@={viewModel.runningName}"
             android:maxLength="15"
+            android:text="@={viewModel.runningName}"
             android:textAlignment="center"
             android:textColor="@android:color/holo_green_light"
+            android:textSize="24sp"
             android:theme="@style/MyEditTextTheme"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -57,10 +58,11 @@
             android:layout_marginTop="16dp"
             android:ems="10"
             android:inputType="numberDecimal"
-            android:text="@={viewModel.runningDistance}"
             android:maxLength="10"
+            android:text="@={viewModel.runningDistance}"
             android:textAlignment="center"
             android:textColor="@android:color/holo_green_light"
+            android:textSize="24sp"
             android:theme="@style/MyEditTextTheme"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -68,63 +70,123 @@
 
         <TextView
             android:id="@+id/running_speed"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:ems="10"
-
+            android:textColor="@android:color/holo_green_light"
             android:text="@{viewModel.runningSpeed}"
             android:textAlignment="center"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/running_distance" />
-
-        <EditText
-            android:id="@+id/running_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:ems="10"
-            android:inputType="numberDecimal"
-            android:text="@={viewModel.runningTime}"
-            android:maxLength="10"
-            android:textAlignment="center"
-            android:textColor="@android:color/holo_green_light"
-            android:theme="@style/MyEditTextTheme"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+        <View
+            android:id="@+id/running_speed_bottom_line"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintEnd_toEndOf="@+id/running_speed"
+            app:layout_constraintStart_toStartOf="@+id/running_speed"
             app:layout_constraintTop_toBottomOf="@+id/running_speed" />
 
         <TextView
-            android:id="@+id/running_calories"
+            android:id="@+id/running_speed_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="Speed"
+            android:textColor="@android:color/darker_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/running_speed_bottom_line" />
+
+        <EditText
+            android:id="@+id/running_time"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:ems="10"
-            android:textColor="@android:color/holo_green_light"
-            android:text="@{viewModel.runningCalories}"
+            android:inputType="numberDecimal"
+            android:maxLength="10"
+            android:text="@={viewModel.runningTime}"
             android:textAlignment="center"
+            android:textColor="@android:color/holo_green_light"
             android:textSize="24sp"
+            android:theme="@style/MyEditTextTheme"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/running_speed_text" />
+
+        <TextView
+            android:id="@+id/running_time_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="Running time"
+            android:textColor="@android:color/darker_gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/running_time" />
+
+        <TextView
+            android:id="@+id/running_calories"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:ems="10"
+            android:text="@{viewModel.runningCalories}"
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_light"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.49"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/running_time_text" />
+        <View
+            android:id="@+id/running_calories_bottom_line"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintEnd_toEndOf="@+id/running_calories"
+            app:layout_constraintStart_toStartOf="@+id/running_calories"
+            app:layout_constraintTop_toBottomOf="@+id/running_calories" />
+
+        <TextView
+            android:id="@+id/running_calories_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="Calories lost"
+            android:textColor="@android:color/darker_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/running_calories_bottom_line" />
 
         <EditText
             android:id="@+id/running_comments"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:ems="10"
             android:inputType="textMultiLine"
-            android:text="@={viewModel.runningComments}"
             android:maxLength="50"
+            android:text="@={viewModel.runningComments}"
             android:textAlignment="center"
             android:textColor="@android:color/holo_green_light"
             android:theme="@style/MyEditTextTheme"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/running_calories" />
+            app:layout_constraintTop_toBottomOf="@+id/running_calories_text" />
+
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
