Major design improvements, a bit of code cleaning

--- a/app/src/main/res/layout/running_creation_fragment_layout.xml
+++ b/app/src/main/res/layout/running_creation_fragment_layout.xml
@@ -17,9 +17,14 @@
             android:id="@+id/running_date_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="32dp"
             android:text="@{viewModel.runningDate}"
-            android:background="@drawable/bordered_button2"
+            android:textAlignment="center"
+            android:textColor="@color/DayNightColor"
+            android:textSize="14sp"
+            android:background="@drawable/bordered_button"
             app:layout_constraintBottom_toTopOf="@+id/running_create_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -29,8 +34,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
+            android:textColor="@android:color/white"
             android:text="@{viewModel.actionString}"
-            android:onClick="@{()->viewModel.save()}"
+            android:backgroundTint="@color/DayNightColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -104,7 +110,7 @@
             android:id="@+id/running_speed_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Speed"
+            android:text="Speed, km/h"
             android:textColor="@android:color/darker_gray"
             app:layout_constraintEnd_toEndOf="@+id/running_speed_bottom_line"
             app:layout_constraintStart_toStartOf="@+id/running_speed_bottom_line"
@@ -134,7 +140,7 @@
             android:id="@+id/running_time_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Running time"
+            android:text="Running time, minutes"
             android:textColor="@android:color/darker_gray"
             app:layout_constraintEnd_toEndOf="@+id/running_time"
             app:layout_constraintStart_toStartOf="@+id/running_time"
