--- a/app/src/main/res/drawable/bordered_button2.xml
+++ b/app/src/main/res/drawable/bordered_button2.xml
@@ -5,7 +5,7 @@
             <!-- background -->
             <solid android:color="@android:color/transparent" />
             <!-- border -->
-            <stroke android:width="2dp" android:color="@color/design_default_color_primary" />
+            <stroke android:width="2dp" android:color="@color/DayNightColor" />
 
             <!-- corner roundness -->
             <corners android:radius="2dp" />
