--- a/app/src/main/res/layout/training_fragment_layout.xml
+++ b/app/src/main/res/layout/training_fragment_layout.xml
@@ -25,7 +25,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
         android:clickable="true"
-        app:backgroundTint="@color/fabColor"
+        app:backgroundTint="@color/DayNightColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_add" />
