--- a/app/src/main/res/layout/running_creation_fragment_layout.xml
+++ b/app/src/main/res/layout/running_creation_fragment_layout.xml
@@ -34,9 +34,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:text="@{viewModel.actionString}"
             android:backgroundTint="@color/DayNightColor"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
